# pds-projekt

dataset_maker/: CMakeLists.txt  add.cu  add.h  main.cpp
facedetector/: CMakeLists.txt  HistogramExtractor.cpp  HistogramExtractor.cu  HistogramExtractor.h  KNNClassifier.cpp  KNNClassifier.cu  KNNClassifier.h  ProcessedImage.cpp  ProcessedImage.h  add.cu  add.h  definitions.h  main.cpp
